--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lib-jitsi-meet": "^1.0.6",
+    "lib-jitsi-meet-dist": "^2.1.2",
     "vue": "^2.6.11",
+    "vue-plugin-load-script": "^1.3.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
